--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -101,6 +101,9 @@ url = {https://hdl.handle.net/11858/00-001M-0000-0013-838A-6}
  volume = 8,
  year = {2021}}
  
+ @article{Schmidt_2012, title={Licensing Revisited: Open Access Clauses in Practice}, volume={22}, ISSN={2213-056X}, url={http://dx.doi.org/10.18352/lq.8055}, DOI={10.18352/lq.8055}, number={3}, journal={LIBER Quarterly: The Journal of the Association of European Research Libraries}, publisher={Ligue des Bibliotheques Europeennes de Recherche}, author={Schmidt, Birgit and Shearer, Kathleen}, year={2012}, month=nov, pages={176–189} }
+
+ @article{Hottenrott_2021, title={The rise of multiple institutional affiliations in academia}, volume={72}, ISSN={2330-1643}, url={http://dx.doi.org/10.1002/asi.24472}, DOI={10.1002/asi.24472}, number={8}, journal={Journal of the Association for Information Science and Technology}, publisher={Wiley}, author={Hottenrott, Hanna and Rose, Michael E. and Lawson, Cornelia}, year={2021}, month=mar, pages={1039–1058} }
  
  @article{BJ_RK_2014, title={How research funders can finance APCs in full OA and hybrid journals}, volume={27}, ISSN={1741-4857}, url={http://dx.doi.org/10.1087/20140203}, DOI={10.1087/20140203}, number={2}, journal={Learned Publishing}, publisher={Wiley}, author={Björk, Bo-Christer and Solomon, David}, year={2014}, month=apr, pages={93–103} }
  
